k8s/infra/traefik/overlays/prod-eu/traefik-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: traefik-depl
spec:
  template:
    spec:
      containers:
        - name: traefik
          args:
            #
            # https://doc.traefik.io/traefik/operations/dashboard/#secure-mode
            #
            # 1. Start by enabling the dashboard by using the following option from Traefik's API on the static configuration:
            # 2. Then define a routing configuration on Traefik itself, with a router attached to the service api@internal in the dynamic configuration, to allow defining:
            #
            - --api=false
            #
            # https://doc.traefik.io/traefik/operations/dashboard/#insecure-mode
            #
            # https://doc.traefik.io/traefik/operations/api/#insecure
            #
            # Enable the API in insecure mode, which means that the API will be available directly on the entryPoint named 'traefik'.
            #
            - --api.insecure=false
            #
            # https://doc.traefik.io/traefik/operations/api/#dashboard
            # https://doc.traefik.io/traefik/operations/dashboard/
            #
            # The dashboard is available at the same location as the API
            # but on the path /dashboard/ by default.
            #
            # The trailing slash / in /dashboard/ is mandatory
            # Optional, Default=true
            #
            - --api.dashboard=false
            #
            # https://doc.traefik.io/traefik/observability/access-logs/#configuration
            #
            - --accesslog
            #
            - --log.level=INFO
            #
            - --entrypoints.http.address=:80
            - --entrypoints.https.address=:443
            #
            - --providers.kubernetescrd
            #
            - --certificatesresolvers.letsencrypt.acme.email=md.staicu@yahoo.com
            - --certificatesresolvers.letsencrypt.acme.storage=/data/acme.json
            - --certificatesresolvers.letsencrypt.acme.dnschallenge.provider=digitalocean
          volumeMounts:
            - name: acme-data
              mountPath: /data
      volumes:
        - name: acme-data
          persistentVolumeClaim:
            claimName: traefik-acme-pvc
